# nccl_generator_v2

./: .gitignore  README.md  README_NCCL228_FIXES.md  comm.py  communication.py  configure_ring_topo.py  configure_topo.py  configure_tree_topo.py  gen_simple.py  goal.py  goal_v2.py  gpu.py  m_test_old.ipynb  main.py  main_test_single.py  main_v2.py  minimal_trace.ipynb  monitor_memory.py  nccl_comm.py  nccl_primitives.py  nsys_events.py  nsys_events_common.py  nsys_events_dask.py  pyproject.toml  simple_sim2goal.py  simplified_simulator.py  test_multirank_visualize.py  test_visualize.py  tmp.txt  topo_viz.py
nccl_goal_generator_r/: check_goal.py  goal.py  goal_translator.py  gpu.py  main.py  main_test_single.py  nccl_comm.py  nccl_primitives.py  nsys_events.py  nsys_events_r.py
simple_sim/: __init__.py  aggregate.py  autograd.py  checkpoint.py  extract.py  ir.py  llama3_training.py  minimal_pp_tp_zero1.py  ops_comm.py  ops_compute.py  ops_schedule.py  pp_schedule.py  pp_stage_builder.py  test_checkpoint.py  timeline_visualize.py  tp_megatron.py  utils.py  visualize.py  zero1.py
unused_modules/: gen_simple.py  goal_v2.py  m_test_old.py  main_test_old.py  main_test_single.py  monitor_memory.py  send_count.py  test.ipynb
