[project]
name = "nccl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "modin[dask]>=0.35.0",
    "numba>=0.61.2",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
]
